--- a/footer.html
+++ b/footer.html
@@ -3,18 +3,19 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
-                <h5 class="mb-0 text-white">
-                    <a class="menu-item header-link" href="index.html">
-                        <i class="fas fa-cube me-2 text-white fs-3"></i>
-                        <span class="fw-bold text-white fs-4">Widget SaaS</span>
-                    </a>
-                </h5>
-                <p class="text-white-50 mb-3">
+                <div class="d-flex align-items-center mb-3">
+                    <i class="fas fa-cube me-2 text-white fs-3"></i>
+                    <div class="d-flex flex-column">
+                        <a href="index.html" title="Home"><span class="fw-bold text-white fs-4 widget-saas-text">Widget SaaS</span></a>
+                        <small class="text-muted" style="line-height: 1; margin-top: -2px;">Plataforma Web3</small>
+                    </div>
+                </div>
+                <p class="text-white-50 mb-3 mt-2">
                     A plataforma mais avançada para monetização de sites
                     através de widgets de tokens.
                 </p>
                 <!-- Ícones de Redes Sociais -->
-                <div class="social-icons">
+                <div class="social-icons mt-3">
                     <a href="#" class="text-white me-3" title="Instagram">
                         <i class="fab fa-instagram fs-4"></i>
                     </a>
