--- a/header.html
+++ b/header.html
@@ -1,10 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm sticky-top">
     <div class="container">
-        <!-- Brand - Logo sozinha à esquerda -->
-        <a class="menu-item header-link" href="index.html">
+        <!-- Logo sozinha à esquerda -->
+        <div class="d-flex align-items-center mb-3">
             <i class="fas fa-cube me-2 text-white fs-3"></i>
-            <span class="fw-bold text-white fs-4">Widget SaaS</span>
-        </a>
+            <div class="d-flex flex-column">
+                <a href="index.html" title="Home"><span class="fw-bold text-white fs-4 widget-saas-text">Widget
+                        SaaS</span></a>
+                <small class="text-muted" style="line-height: 1; margin-top: -2px;">Plataforma Web3</small>
+            </div>
+        </div>
 
         <!-- Mobile Toggle -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
