index pronto - dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,11 @@ Sistema oficial de dashboard da aplicação.
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- JavaScript Modular -->
+    <script src="js/shared/wallet.js"></script>
     <script src="js/modules/web3.js"></script>
     <script src="js/shared/template-loader.js"></script>
     <script src="js/modules/dashboard.js"></script>
+    <script src="js/modules/dashboard-menu-logout.js"></script>
     
     <!-- Theme Controller para tema escuro padrão -->
     <script src="js/theme-controller-unified.js"></script>
