--- a/auth.html
+++ b/auth.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
+    <!-- Ethers.js via UNPKG -->
+    <script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+    
     <!-- CSS UNIFICADO - Substitui app.css + auth.css -->
     <link href="css/styles.css" rel="stylesheet">
 </head>
