organizaçcao pelo nova IA

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,9 +47,7 @@ Sistema oficial de dashboard da aplicação.
                                     </p>
                                 </div>
                                 <div class="col-md-4 text-end">
-                                    <div id="wallet-info-display">
-                                    
-                                    </div>
+                                    <div id="wallet-info-display"></div>
                                 </div>
                             </div>
                         </div>
@@ -58,12 +56,12 @@ Sistema oficial de dashboard da aplicação.
             </div>
 
             <!-- Estatísticas Principais -->
-            <div class="row mb-4">
-                <div class="col-lg-3 col-md-6 mb-3">
-                    <div class="card h-100 stats-card card-neon">
+            <div class="row g-3 mb-4">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 stats-card">
                         <div class="card-body text-center">
-                            <i class="fas fa-wallet fa-2x text-success mb-3 neon-icon"></i>
-                            <h4 class="text-success neon-text" id="total-earnings">$0.00</h4>
+                            <i class="fas fa-wallet fa-2x text-success mb-3"></i>
+                            <h4 class="text-success" id="total-earnings">$0.00</h4>
                             <h6 class="text-muted mb-0">Total de Ganhos</h6>
                             <small class="text-success" id="earnings-change">
                                 <i class="fas fa-arrow-up me-1"></i>Carregando...
@@ -71,11 +69,11 @@ Sistema oficial de dashboard da aplicação.
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-3">
-                    <div class="card h-100 stats-card card-neon">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 stats-card">
                         <div class="card-body text-center">
-                            <i class="fas fa-file-contract fa-2x text-primary mb-3 neon-icon"></i>
-                            <h4 class="text-primary neon-text" id="active-contracts">0</h4>
+                            <i class="fas fa-file-contract fa-2x text-primary mb-3"></i>
+                            <h4 class="text-primary" id="active-contracts">0</h4>
                             <h6 class="text-muted mb-0">Contratos Ativos</h6>
                             <small class="text-primary" id="contracts-change">
                                 <i class="fas fa-plus me-1"></i>Carregando...
@@ -83,11 +81,11 @@ Sistema oficial de dashboard da aplicação.
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-3">
-                    <div class="card h-100 stats-card card-neon">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 stats-card">
                         <div class="card-body text-center">
-                            <i class="fas fa-chart-line fa-2x text-info mb-3 neon-icon"></i>
-                            <h4 class="text-info neon-text" id="total-sales">0</h4>
+                            <i class="fas fa-chart-line fa-2x text-info mb-3"></i>
+                            <h4 class="text-info" id="total-sales">0</h4>
                             <h6 class="text-muted mb-0">Vendas Totais</h6>
                             <small class="text-info" id="sales-change">
                                 <i class="fas fa-arrow-up me-1"></i>Carregando...
@@ -95,14 +93,14 @@ Sistema oficial de dashboard da aplicação.
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-3">
-                    <div class="card h-100 stats-card card-neon">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 stats-card">
                         <div class="card-body text-center">
-                            <i class="fas fa-coins fa-2x text-warning mb-3 neon-icon"></i>
-                            <h4 class="text-warning neon-text" id="available-credits">0</h4>
+                            <i class="fas fa-coins fa-2x text-warning mb-3"></i>
+                            <h4 class="text-warning" id="available-credits">0</h4>
                             <h6 class="text-muted mb-0">Créditos</h6>
                             <small class="text-muted">
-                                <a href="dashboard.html?section=buy-credits" class="text-decoration-none menu-item">
+                                <a href="dashboard.html?section=buy-credits" class="text-decoration-none">
                                     <i class="fas fa-shopping-cart me-1"></i>Comprar mais
                                 </a>
                             </small>
